# asiochan

./: .gitignore  CMakeLists.txt  asiochanConfig.cmake  vcpkg.json
include/asiochan/: channel.hpp  channel_buff_size.hpp  channel_concepts.hpp  interrupter.hpp  read_op.hpp  select.hpp  sync_promise.hpp  write_op.hpp
include/asiochan/detail/: allocate_tracer.hpp  channel_buffer.hpp  channel_method_ops.hpp  channel_op_result_base.hpp  channel_shared_state.hpp  channel_waiter_list.hpp  send_slot.hpp
tests/: CMakeLists.txt
tests/asiochan/: test_channel.cpp
